--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,5 @@
-torch>=2.0.0
-transformers>=4.36.0
-datasets>=2.14.0
-accelerate>=0.24.0
-sentencepiece>=0.1.99
-tensorboard>=2.14.0
-wandb>=0.15.0
-numpy>=1.24.0
-tqdm>=4.65.0
-peft>=0.6.0
-evaluate>=0.4.0
-nltk>=3.8.1
-rouge-score>=0.1.2
+# 文档工具依赖
+markdown>=3.4.0
+mkdocs>=1.4.0
+mkdocs-material>=8.5.0
+pymdown-extensions>=9.9.0
